Increased canvas res + zoom control

--- a/public/index.html
+++ b/public/index.html
@@ -84,6 +84,11 @@
                 <input type="checkbox" id="autoSaveToggle">
                 <span>Auto-save</span>
             </label>
+            <input id="zoomInput" type="number" min="10" max="1000" value="100" style="width: 70px; padding: 8px; border-radius: 8px; border: 1px solid #d0d0d0;">
+            <button class="control-btn zoom-step" data-zoom="100">100%</button>
+            <button class="control-btn zoom-step" data-zoom="125">125%</button>
+            <button class="control-btn zoom-step" data-zoom="150">150%</button>
+            <button class="control-btn zoom-step" data-zoom="200">200%</button>
         </div>
         
         <!-- Status Bar -->
